# x-downloader

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  start.sh  tsconfig.node.json
backend/: main.py  requirements.txt
docs/: UI_VISUAL_EXAMPLES.md  analisis-komparatif-final.md  analisis-x-downloader-final-v2.md  analisis-x-downloader-final.md
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BatchImport.tsx  DownloadOrb.tsx  FormatPreview.tsx  QueueItem.tsx  SettingsDialog.tsx
nsfw-dl/: .gitignore  LICENSE  PKGBUILD  README.md  install.sh  nsfw-dl  nsfw-dl.desktop  uninstall.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: BatchImport.tsx  DownloadOrb.tsx  FormatPreview.tsx  SettingsModal.tsx
tauri-app/: package.json
tauri-app/src-tauri/: tauri.conf.json
