[package]
name = "x-downloader"
version = "2.0.0"
description = "Modern Native Video Downloader for NSFW sites"
authors = ["x-downloader"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
chrono = "0.4"
dirs = "5"